k8s/web/expense-tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-deployment
  labels:
    app: expense-tracker
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: expense-tracker
          image: localhost:5000/expense-tracker:0.3.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: expense-tracker-storage
              mountPath: /app-data
      volumes:
        - name: expense-tracker-storage
          persistentVolumeClaim:
            claimName: expense-tracker-pvc
      securityContext:
        fsGroup: 1001
