k8s/web/expense-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-service
spec:
  selector:
    app: expense-tracker
  ports:
    - protocol: TCP
      port: 8484
      targetPort: 8080
