k8s/web/expense-tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
spec:
  rules:
    - host: expense-tracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker-service
                port:
                  number: 8484
